RESOLVED FIXED210467
YouTube sometimes navigates unexpectedly when invoking a context menu on a video link.
https://bugs.webkit.org/show_bug.cgi?id=210467
Summary YouTube sometimes navigates unexpectedly when invoking a context menu on a vi...
Megan Gardner
Reported 2020-04-13 16:53:59 PDT
WebTouchEvents not cancelled soon enough in the life of a ContextMenu Gesture, causing TouchEvents and ContextMenus to fire at the same time.
Attachments
Patch (1.81 KB, patch)
2020-04-13 16:57 PDT, Megan Gardner
no flags
Patch (1.86 KB, patch)
2020-04-13 17:11 PDT, Megan Gardner
no flags
Patch for landing (1.85 KB, patch)
2020-04-14 09:15 PDT, Megan Gardner
no flags
Megan Gardner
Comment 1 2020-04-13 16:57:43 PDT
Megan Gardner
Comment 2 2020-04-13 16:58:48 PDT
Tim Horton
Comment 3 2020-04-13 17:03:26 PDT
Comment on attachment 396358 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=396358&action=review At all possible to test? > Source/WebKit/ChangeLog:3 > + TouchEvents not cancelled soon enough in the life of a ContextMenu Gesture, causing TouchEvents and ContextMenus to fire at the same time. How about "YouTube sometimes navigates unexpectedly when invoking a context menu on a video link" for the title. > Source/WebKit/ChangeLog:9 > + We need to cancel the touch events gesture when we are cleaing out things to make way for the ContextMenu Gesture and related events. And some more words here. And no "cleaing out things". Maybe something like: "Cancel any outstanding touches tracked by WebTouchEventsGestureRecognizer, so that we dispatch `touchcancel` to the page instead of `touchend`, so that the page does not misinterpret context menu invocation as a tap."
Megan Gardner
Comment 4 2020-04-13 17:11:14 PDT
Megan Gardner
Comment 5 2020-04-14 09:15:58 PDT
Created attachment 396425 [details] Patch for landing
EWS
Comment 6 2020-04-14 09:38:55 PDT
Committed r260077: <https://trac.webkit.org/changeset/260077> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396425 [details].
Note You need to log in before you can comment on or make changes to this bug.