YouTube sometimes navigates unexpectedly when invoking a context menu on a video link. https://bugs.webkit.org/show_bug.cgi?id=210467 <rdar://problem/58841584>

Reviewed by Tim Horton.

Cancel any outstanding touches tracked by WebTouchEventsGestureRecognizer, so that we dispatch
`touchcancel` to the page instead of `touchend`, so that the page does not misinterpret
context menu invocation as a tap.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView contextMenuInteraction:previewForHighlightingMenuWithConfiguration:]):


Canonical link: https://commits.webkit.org/223373@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260077 268f45cc-cd09-0410-ab3c-d52691b4dbfc